--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
             padding: 0;
         }
         #quote {
-            margin-top: 100px;
-            font-size: 24px;
+            margin-top: 50px;
+            font-size: 18px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 80%;
+            margin-left: auto;
+            margin-right: auto;
         }
         #author {
             font-style: italic;
