--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
             padding: 0;
         }
         #quote {
-            margin-top: 10px;
+            margin-top: 30px;
+            margin-bottom: 30px;
             font-size: 18px;
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 50%;
+            max-width: 80%;
             margin-left: auto;
             margin-right: auto;
         }
         #author {
             font-style: italic;
-            margin-top: 20px;
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
