--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
     <script>
         const quotes = [
-            { text: "The only way to do great work is to love what you do.", author: "Steve Jobs" },
-            { text: "Life is what happens when you're busy making other plans.", author: "John Lennon" },
-            { text: "In the end, it's not the years in your life that count. It's the life in your years.", author: "Abraham Lincoln" },
-            { text: "You miss 100% of the shots you don't take.", author: "Wayne Gretzky" },
-            { text: "The greatest glory in living lies not in never falling, but in rising every time we fall.", author: "Nelson Mandela" }
+            { text: " I have dreamed and dreamed myself to life. And back again ", author: "Joan Murray" },
+            { text: "If you have been brutally broken, but still have the courage to be gentle to others then you deserve a love deeper than the ocean itself.", author: "Nikita Gill" },
+            { text: "And you wish to be a poet; and you wish to be a lover.", author: "Virginia Woolf" },
+            { text: "1 dream of you in colours that don't exist", author: "" },
+            { text: "I dream that in some other life we are still together.", author: "CMustonen" }
         ];
 
         const quoteElement = document.getElementById('quote');
