--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         #quote {
-            margin-top: 50px;
+            margin-top: 10px;
             font-size: 18px;
             padding: 20px;
             background-color: #fff;
@@ -39,7 +39,29 @@
             { text: "If you have been brutally broken, but still have the courage to be gentle to others then you deserve a love deeper than the ocean itself.", author: "Nikita Gill" },
             { text: "And you wish to be a poet; and you wish to be a lover.", author: "Virginia Woolf" },
             { text: "1 dream of you in colours that don't exist", author: "" },
-            { text: "I dream that in some other life we are still together.", author: "CMustonen" }
+            { text: "I dream that in some other life we are still together.", author: "CMustonen" },
+            { text: " Nights filled with worship, holding each other like a prayer unspoken.", author: "Nikita Gill" },
+            { text: "I hope you are loved in the way you deserve.", author: "Nikita Gill" },
+            { text: "The universe created you for a reason, now go out there and find out what it is.", author: "Nikita Gill" },
+            { text: "You have turned your heart into a museum of people you've loved to keep them alive inside you.", author: "Nikita Gill" },
+            { text: "Not all girls are made of sugar and spice and all things nice. Some are made of witchcraft and wolf and a little bit of vice.", author: "Nikita Gill" },
+            { text: "Love yourself loudly, dangerously, everywhere people have been afraid to love you, afraid to ask the way to cherish you, afraid to hold you. Love yourself most in these places, because who can be a better teacher to others in how to love you than yourself.", author: "Nikita Gill" },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            { text: " ", author: " " },
+            
         ];
 
         const quoteElement = document.getElementById('quote');
