--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         #quote {
             margin-top: 10px;
             font-size: 18px;
+            padding: 20px;
             background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 70%;
+            max-width: 60%;
             margin-left: auto;
             margin-right: auto;
         }
@@ -34,7 +33,7 @@
 
     <script>
         const quotes = [
-            { text: " I have dreamed and dreamed myself to life. And back again ", author: "Joan Murray" },
+            { text: "I have dreamed and dreamed myself to life. And back again ", author: "Joan Murray" },
             { text: "If you have been brutally broken, but still have the courage to be gentle to others then you deserve a love deeper than the ocean itself.", author: "Nikita Gill" },
             { text: "And you wish to be a poet; and you wish to be a lover.", author: "Virginia Woolf" },
             { text: "1 dream of you in colours that don't exist", author: "" },
@@ -45,8 +44,8 @@
             { text: "You have turned your heart into a museum of people you've loved to keep them alive inside you.", author: "Nikita Gill" },
             { text: "Not all girls are made of sugar and spice and all things nice. Some are made of witchcraft and wolf and a little bit of vice.", author: "Nikita Gill" },
             { text: "Love yourself loudly, dangerously, everywhere people have been afraid to love you, afraid to ask the way to cherish you, afraid to hold you. Love yourself most in these places, because who can be a better teacher to others in how to love you than yourself.", author: "Nikita Gill" },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
+            { text: "Girls like her were born in a storm. They have lightning in their souls. Thunder in their hearts. And chaos in their bones.", author: "Nikita Gill" },
+            { text: "The moon comforts me when I cannot sleep", author: "- S. C. C." },
             { text: " ", author: " " },
             { text: " ", author: " " },
             { text: " ", author: " " },
