--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             padding: 0;
         }
         #quote {
-            margin-top: 10px;
+            margin-top: 20px;
             font-size: 18px;
             padding: 20px;
             background-color: #fff;
-            max-width: 60%;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 100%;
             margin-left: auto;
             margin-right: auto;
         }
@@ -36,7 +38,7 @@
             { text: "I have dreamed and dreamed myself to life. And back again ", author: "Joan Murray" },
             { text: "If you have been brutally broken, but still have the courage to be gentle to others then you deserve a love deeper than the ocean itself.", author: "Nikita Gill" },
             { text: "And you wish to be a poet; and you wish to be a lover.", author: "Virginia Woolf" },
-            { text: "1 dream of you in colours that don't exist", author: "" },
+            { text: "I dream of you in colours that don't exist", author: "" },
             { text: "I dream that in some other life we are still together.", author: "CMustonen" },
             { text: " Nights filled with worship, holding each other like a prayer unspoken.", author: "Nikita Gill" },
             { text: "I hope you are loved in the way you deserve.", author: "Nikita Gill" },
@@ -46,9 +48,9 @@
             { text: "Love yourself loudly, dangerously, everywhere people have been afraid to love you, afraid to ask the way to cherish you, afraid to hold you. Love yourself most in these places, because who can be a better teacher to others in how to love you than yourself.", author: "Nikita Gill" },
             { text: "Girls like her were born in a storm. They have lightning in their souls. Thunder in their hearts. And chaos in their bones.", author: "Nikita Gill" },
             { text: "The moon comforts me when I cannot sleep", author: "- S. C. C." },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
+            { text: "I love the stillness of a room after a party. The chairs are moved, the cushions disarranged, everything is there to show that people enjoyed themselves; and one comes back to the empty room happy that it's over, happy to relax and say, 'Now we are alone again!'", author: "Daphné du Maurier" },
+            { text: "...l find 1 don't want to talk to anyone much.", author: "Jana Prikryl" },
+            { text: "Someone will remember us, I say, even in another time.", author: "Sappho" },
             { text: " ", author: " " },
             { text: " ", author: " " },
             { text: " ", author: " " },
