--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         #quote {
-            margin-top: 100px;
+            margin-top: 10px;
             font-size: 24px;
         }
         #author {
@@ -44,9 +44,9 @@
             { text: "I love the stillness of a room after a party. The chairs are moved, the cushions disarranged, everything is there to show that people enjoyed themselves; and one comes back to the empty room happy that it's over, happy to relax and say, 'Now we are alone again!'", author: "Daphné du Maurier" },
             { text: "...l find 1 don't want to talk to anyone much.", author: "Jana Prikryl" },
             { text: "Someone will remember us, I say, even in another time.", author: "Sappho" },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
+            { text: "One day you'll sit in the sun and things won't feel so bad", author: "" },
+            { text: "I told myself: I have been lost before, I have been cold before.", author: "Louise Glück" },
+            { text: "I'm not used to being loved. I wouldn't know what to do.", author: "F. Scott Fitzgerald" },
             { text: " ", author: " " },
             { text: " ", author: " " },
             { text: " ", author: " " },
