--- a/index.html
+++ b/index.html
@@ -47,14 +47,24 @@
             { text: "One day you'll sit in the sun and things won't feel so bad", author: "" },
             { text: "I told myself: I have been lost before, I have been cold before.", author: "Louise Glück" },
             { text: "I'm not used to being loved. I wouldn't know what to do.", author: "F. Scott Fitzgerald" },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            { text: " ", author: " " },
-            
+            { text: "Saying something dangerous, like I love you...", author: "anne sexton" },
+            { text: "How i ruined everything by saying it out loud.", author: "richard siken" },
+            { text: "Yes yes yes I do like you. I am afraid to write the stronger word.", author: "virginia woolf" },
+            { text: "Whose life am I living? Whose life am I failing to live?", author: "Margaret Atwood" },
+            { text: "I'm not sure which is worse: intense feeling, or the absence of it.", author: "Margaret Atwood" },
+            { text: "You are so afraid of rejection that you push away anyone who you grow any fondness for. And it keeps you lonely, but at least there's consistency.", author: "Sue Zhao" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
         ];
 
         const quoteElement = document.getElementById('quote');
