--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             padding: 0;
         }
         #quote {
-            margin-top: 10px;
+            margin-top: 5px;
             font-size: 24px;
         }
         #author {
             font-style: italic;
-            margin-top: 20px;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -53,8 +53,8 @@
             { text: "Whose life am I living? Whose life am I failing to live?", author: "Margaret Atwood" },
             { text: "I'm not sure which is worse: intense feeling, or the absence of it.", author: "Margaret Atwood" },
             { text: "You are so afraid of rejection that you push away anyone who you grow any fondness for. And it keeps you lonely, but at least there's consistency.", author: "Sue Zhao" },
-            { text: "", author: "" },
-            { text: "", author: "" },
+            { text: "How do you mourn the loss of a love you never spoke out loud never felt with your own two hands?", author: "shelby eileen" },
+            { text: "How can something be there, and then not be there? How do we forgive ourselves for all the things we did not become?", author: "david "doc" luben" },
             { text: "", author: "" },
             { text: "", author: "" },
             { text: "", author: "" },
