--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         #quote {
-            margin-top: 5px;
+            margin-top: 10px;
             font-size: 24px;
         }
         #author {
@@ -55,8 +55,8 @@
             { text: "You are so afraid of rejection that you push away anyone who you grow any fondness for. And it keeps you lonely, but at least there's consistency.", author: "Sue Zhao" },
             { text: "How do you mourn the loss of a love you never spoke out loud never felt with your own two hands?", author: "shelby eileen" },
             { text: "How can something be there, and then not be there? How do we forgive ourselves for all the things we did not become?", author: "david "doc" luben" },
-            { text: "", author: "" },
-            { text: "", author: "" },
+            { text: "In the dark times, will there also be singing? Yes, there will be singing. About the dark times.", author: "" },
+            { text: "I took a deep breath and listened to the old brag of my heart. I am, I am, I am.", author: "Sylvia Plath" },
             { text: "", author: "" },
             { text: "", author: "" },
             { text: "", author: "" },
