--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         #author {
             font-style: italic;
-            margin-top: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -57,10 +57,10 @@
             { text: "How can something be there, and then not be there? How do we forgive ourselves for all the things we did not become?", author: "david "doc" luben" },
             { text: "In the dark times, will there also be singing? Yes, there will be singing. About the dark times.", author: "" },
             { text: "I took a deep breath and listened to the old brag of my heart. I am, I am, I am.", author: "Sylvia Plath" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
+            { text: "If I lived by the sea I would never be really sad. I get an immense sense of eternity and peace from the ocean. I can lose myself in staring at it hour after hour.", author: "Sylvia Plath" },
+            { text: "And there was no dance, no holy place from which we were absent.", author: "Sappho" },
+            { text: "So what's the alternative? Feel nothing at all? Never love again? Without love, what is there?", author: "O. Leary" },
+            { text: "They look at each other like they were almost lovers, like they should have kissed and made love and laughed in bed together, but they chose to stay friends instead. They look at each other with what ifs and could haves and hearts full of regrets.", author: "Nikita Gill" },
             { text: "", author: "" },
             { text: "", author: "" },
             { text: "", author: "" },
