--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         #quote {
-            margin-top: 10px;
+            margin-top: 40px;
             font-size: 24px;
         }
         #author {
@@ -61,6 +61,15 @@
             { text: "And there was no dance, no holy place from which we were absent.", author: "Sappho" },
             { text: "So what's the alternative? Feel nothing at all? Never love again? Without love, what is there?", author: "O. Leary" },
             { text: "They look at each other like they were almost lovers, like they should have kissed and made love and laughed in bed together, but they chose to stay friends instead. They look at each other with what ifs and could haves and hearts full of regrets.", author: "Nikita Gill" },
+            { text: "I wish 1 had a map of my mind so I could find a way through my thoughts without always getting lost in fields of daydreams.", author: "Kristen Costello" },
+            { text: "Beware that, when fighting monsters, you yourself do not become a monster... for when you gaze long into the abyss. The abyss gazes also into you.", author: "Friedrich Nietzsche" },
+            { text: "I wish I were a girl again, half savage and hardy, and free; and laughing at injuries, not maddening under them! Why am I so changed?", author: "Emily Bronte" },
+            { text: "i write you into every universe that i create and in each one you are full of some kind of light", author: "" },
+            { text: "I have never rested, always run, run so fast that the sun can't make a shadow. Well, here I am - mid-way, lost in a dark wood - this selva oscura, without a torch, a guide, or even a bird.", author: "Jeanette Winterson" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
             { text: "", author: "" },
             { text: "", author: "" },
             { text: "", author: "" },
