--- a/index.html
+++ b/index.html
@@ -66,12 +66,16 @@
             { text: "I wish I were a girl again, half savage and hardy, and free; and laughing at injuries, not maddening under them! Why am I so changed?", author: "Emily Bronte" },
             { text: "i write you into every universe that i create and in each one you are full of some kind of light", author: "" },
             { text: "I have never rested, always run, run so fast that the sun can't make a shadow. Well, here I am - mid-way, lost in a dark wood - this selva oscura, without a torch, a guide, or even a bird.", author: "Jeanette Winterson" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
+            { text: "i contradict myself. i am large... i contain multitudes", author: "walt whitman" },
+            { text: "I am going to make a very beautiful life for myself no matter what it takes.", author: "" },
+            { text: "The connections between and among women are the most feared, the most problematic, and the most potentially transforming force on the planet.", author: "Adrienne Rich" },
+            { text: "There is no faith in a man. Not even in a brother, so girls if you must love, Love One Another.", author: "" },
+            { text: "there are just some songs that make you cry because they sound like endings", author: "" },
+            { text: "...I am an echo of what I was.", author: "Anne Ridler" },
+            { text: "I act and react, and suddenly I wonder 'Where is the girl that I was last year? ... Two years ago? … What would she think of me now?'", author: "" },
+            { text: "I always feel sad for the girl that I was.", author: "" },
+            { text: "The mind is its own place, and in itself can make a heaven of hell, a hell of heaven.", author: "John Milton" },
+            { text: "Another belief of mine: that everyone else my age is an adult, whereas I am merely in disguise.", author: "Margaret Atwood" },
             { text: "", author: "" },
             { text: "", author: "" },
         ];
