--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-Sure! I've reduced the space above and below the text by adjusting the margins. Here's the updated HTML code:
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,8 +13,16 @@ Sure! I've reduced the space above and below the text by adjusting the margins. 
             padding: 0;
         }
         #quote {
-            margin-top: 50px;
-            font-size: 24px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            font-size: 18px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 80%;
+            margin-left: auto;
+            margin-right: auto;
         }
         #author {
             font-style: italic;
@@ -103,6 +108,3 @@ Sure! I've reduced the space above and below the text by adjusting the margins. 
     </script>
 </body>
 </html>
-```
-
-I've adjusted the `margin-top` and `margin-bottom` properties for the `#quote` and `#author` elements to reduce the space above and below the text.
