font Update index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote Generator</title>
     <style>
-        body {
+      body {
             font-family: Arial, sans-serif;
             text-align: center;
             background-color: #f4f4f4;
@@ -14,7 +14,8 @@
         }
         #quote {
             margin-top: 10px;
-            font-size: 20px;
+            margin-bottom: 20px;
+            font-size: 18px;
         }
         #author {
             font-style: italic;
@@ -76,9 +77,7 @@
             { text: "I act and react, and suddenly I wonder 'Where is the girl that I was last year? ... Two years ago? … What would she think of me now?'", author: "" },
             { text: "I always feel sad for the girl that I was.", author: "" },
             { text: "The mind is its own place, and in itself can make a heaven of hell, a hell of heaven.", author: "John Milton" },
-            { text: "Another belief of mine: that everyone else my age is an adult, whereas I am merely in disguise.", author: "Margaret Atwood" },
-            { text: "", author: "" },
-            { text: "", author: "" }
+            { text: "Another belief of mine: that everyone else my age is an adult, whereas I am merely in disguise.", author: "Margaret Atwood" }
         ];
 
         const quoteElement = document.getElementById('quote');
