--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Random Quote Generator</title>
     <style>
       body {
-            font-family: Arial, sans-serif;
+            font-family: Calibri, Arial, sans-serif;
             text-align: center;
             background-color: #f4f4f4;
             margin: 0;
@@ -17,7 +17,7 @@
             font-size: 24px;
         }
         #author {
-            font-style: italic;
+            font-style: italic, bold;
             margin-top: 20px;
         }
     </style>
