--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             font-size: 24px;
         }
         #author {
-            font-style: italic, bold;
+            font-style: italic;
+            font-weight: bold;
             margin-top: 20px;
         }
     </style>
