more quotes Update index.html

--- a/index.html
+++ b/index.html
@@ -34,12 +34,37 @@
             { text: "And you wish to be a poet; and you wish to be a lover.", author: "Virginia Woolf" },
             { text: "I dream of you in colours that don't exist", author: "" },
             { text: "I dream that in some other life we are still together.", author: "CMustonen" },
-            { text: " Nights filled with worship, holding each other like a prayer unspoken.", author: "Nikita Gill" },
+            { text: "Nights filled with worship, holding each other like a prayer unspoken.", author: "Nikita Gill" },
             { text: "I hope you are loved in the way you deserve.", author: "Nikita Gill" },
             { text: "The universe created you for a reason, now go out there and find out what it is.", author: "Nikita Gill" },
             { text: "You have turned your heart into a museum of people you've loved to keep them alive inside you.", author: "Nikita Gill" },
             { text: "Not all girls are made of sugar and spice and all things nice. Some are made of witchcraft and wolf and a little bit of vice.", author: "Nikita Gill" },
-            { text: "Whose life am I living? Whose life am I failing to live?", author: "Margaret Atwood" }
+            { text: "Whose life am I living? Whose life am I failing to live?", author: "Margaret Atwood" },
+            { text: "I'm not sure which is worse: intense feeling, or the absence of it.", author: "Margaret Atwood" },
+            { text: "You are so afraid of rejection that you push away anyone who you grow any fondness for. And it keeps you lonely, but at least there's consistency.", author: "Sue Zhao" },
+            { text: "How do you mourn the loss of a love you never spoke out loud never felt with your own two hands?", author: "shelby eileen" },
+            { text: "How can something be there, and then not be there? How do we forgive ourselves for all the things we did not become?", author: "david "doc" luben" },
+            { text: "In the dark times, will there also be singing? Yes, there will be singing. About the dark times.", author: "" },
+            { text: "I took a deep breath and listened to the old brag of my heart. I am, I am, I am.", author: "Sylvia Plath" },
+            { text: "If I lived by the sea I would never be really sad. I get an immense sense of eternity and peace from the ocean. I can lose myself in staring at it hour after hour.", author: "Sylvia Plath" },
+            { text: "And there was no dance, no holy place from which we were absent.", author: "Sappho" },
+            { text: "So what's the alternative? Feel nothing at all? Never love again? Without love, what is there?", author: "O. Leary" },
+            { text: "They look at each other like they were almost lovers, like they should have kissed and made love and laughed in bed together, but they chose to stay friends instead. They look at each other with what ifs and could haves and hearts full of regrets.", author: "Nikita Gill" },
+            { text: "I wish 1 had a map of my mind so I could find a way through my thoughts without always getting lost in fields of daydreams.", author: "Kristen Costello" },
+            { text: "Beware that, when fighting monsters, you yourself do not become a monster... for when you gaze long into the abyss. The abyss gazes also into you.", author: "Friedrich Nietzsche" },
+            { text: "I wish I were a girl again, half savage and hardy, and free; and laughing at injuries, not maddening under them! Why am I so changed?", author: "Emily Bronte" },
+            { text: "i write you into every universe that i create and in each one you are full of some kind of light", author: "" },
+            { text: "I have never rested, always run, run so fast that the sun can't make a shadow. Well, here I am - mid-way, lost in a dark wood - this selva oscura, without a torch, a guide, or even a bird.", author: "Jeanette Winterson" },
+            { text: "i contradict myself. i am large... i contain multitudes", author: "walt whitman" },
+            { text: "I am going to make a very beautiful life for myself no matter what it takes.", author: "" },
+            { text: "The connections between and among women are the most feared, the most problematic, and the most potentially transforming force on the planet.", author: "Adrienne Rich" },
+            { text: "There is no faith in a man. Not even in a brother, so girls if you must love, Love One Another.", author: "" },
+            { text: "there are just some songs that make you cry because they sound like endings", author: "" },
+            { text: "...I am an echo of what I was.", author: "Anne Ridler" },
+            { text: "I act and react, and suddenly I wonder 'Where is the girl that I was last year? ... Two years ago? … What would she think of me now?'", author: "" },
+            { text: "I always feel sad for the girl that I was.", author: "" },
+            { text: "The mind is its own place, and in itself can make a heaven of hell, a hell of heaven.", author: "John Milton" },
+            { text: "Another belief of mine: that everyone else my age is an adult, whereas I am merely in disguise.", author: "Margaret Atwood" }
         ];
 
         const quoteElement = document.getElementById('quote');
