added quote Update index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             { text: "You have turned your heart into a museum of people you've loved to keep them alive inside you.", author: "Nikita Gill" },
             { text: "Not all girls are made of sugar and spice and all things nice. Some are made of witchcraft and wolf and a little bit of vice.", author: "Nikita Gill" },
             { text: "Whose life am I living? Whose life am I failing to live?", author: "Margaret Atwood" },
-            { text: "I'm not sure which is worse: intense feeling, or the absence of it.", author: "Margaret Atwood" }
+            { text: "I'm not sure which is worse: intense feeling, or the absence of it.", author: "Margaret Atwood" },
+            { text: "You are so afraid of rejection that you push away anyone who you grow any fondness for. And it keeps you lonely, but at least there's consistency.", author: "Sue Zhao" },
+            { text: "How do you mourn the loss of a love you never spoke out loud never felt with your own two hands?", author: "shelby eileen" }
         ];
 
         const quoteElement = document.getElementById('quote');
