added quote Update index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
             { text: "I have never rested, always run, run so fast that the sun can't make a shadow. Well, here I am - mid-way, lost in a dark wood - this selva oscura, without a torch, a guide, or even a bird.", author: "Jeanette Winterson" },
             { text: "i contradict myself. i am large... i contain multitudes", author: "Walt Whitman" },
             { text: "I am going to make a very beautiful life for myself no matter what it takes.", author: "" },
-            { text: "The connections between and among women are the most feared, the most problematic, and the most potentially transforming force on the planet.", author: "Adrienne Rich" }
+            { text: "The connections between and among women are the most feared, the most problematic, and the most potentially transforming force on the planet.", author: "Adrienne Rich" },
+            { text: "There is no faith in a man. Not even in a brother, so girls if you must love, Love One Another.", author: "" },
+            { text: "there are just some songs that make you cry because they sound like endings", author: "" },
+            { text: "...I am an echo of what I was.", author: "Anne Ridler" },
+            { text: "I act and react, and suddenly I wonder 'Where is the girl that I was last year? ... Two years ago? … What would she think of me now?'", author: "" },
+            { text: "I always feel sad for the girl that I was.", author: "" },
+            { text: "The mind is its own place, and in itself can make a heaven of hell, a hell of heaven.", author: "John Milton" },
+            { text: "Another belief of mine: that everyone else my age is an adult, whereas I am merely in disguise.", author: "Margaret Atwood" }
         ];
 
         const quoteElement = document.getElementById('quote');
