added quote Update index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
             { text: "I act and react, and suddenly I wonder 'Where is the girl that I was last year? ... Two years ago? … What would she think of me now?'", author: "" },
             { text: "I always feel sad for the girl that I was.", author: "" },
             { text: "The mind is its own place, and in itself can make a heaven of hell, a hell of heaven.", author: "John Milton" },
-            { text: "Another belief of mine: that everyone else my age is an adult, whereas I am merely in disguise.", author: "Margaret Atwood" }
+            { text: "Another belief of mine: that everyone else my age is an adult, whereas I am merely in disguise.", author: "Margaret Atwood" },
+            { text: "This is not enough, this is not enough to prove it yet No, I need to hit the bottom.", author: "" },
+            { text: "I am too young and I've loved you too much.", author: "Fyodor Dostoyevsky" },
+            { text: "I am heartbroken over no one, over having nobody to wish for, nobody to hope for.", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" },
+            { text: "", author: "" }
         ];
 
         const quoteElement = document.getElementById('quote');
