added quotes Update index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         const quotes = [
             { text: "I have dreamed and dreamed myself to life. And back again.", author: "Joan Murray" },
             { text: "If you have been brutally broken, but still have the courage to be gentle to others then you deserve a love deeper than the ocean itself.", author: "Nikita Gill" },
-            { text: "And you wish to be a poet; and you wish to be a lover.", author: "Virginia Woolf" },
+            { text: "And you wish to be a poet; and you wish to be a lover.", author: "Virginia Wolf" },
             { text: "I dream of you in colours that don't exist", author: "" },
             { text: "I dream that in some other life we are still together.", author: "CMustonen" },
             { text: "Nights filled with worship, holding each other like a prayer unspoken.", author: "Nikita Gill" },
@@ -49,7 +49,7 @@
             { text: "If I lived by the sea I would never be really sad. I get an immense sense of eternity and peace from the ocean. I can lose myself in staring at it hour after hour.", author: "Sylvia Plath" },
             { text: "And there was no dance, no holy place from which we were absent.", author: "Sappho" },
             { text: "So what's the alternative? Feel nothing at all? Never love again? Without love, what is there?", author: "O. Leary" },
-            { text: "I wish 1 had a map of my mind so I could find a way through my thoughts without always getting lost in fields of daydreams.", author: "Kristen Costello" },
+            { text: "I wish I had a map of my mind so I could find a way through my thoughts without always getting lost in fields of daydreams.", author: "Kristen Costello" },
             { text: "Beware that, when fighting monsters, you yourself do not become a monster... for when you gaze long into the abyss. The abyss gazes also into you.", author: "Friedrich Nietzsche" },
             { text: "I wish I were a girl again, half savage and hardy, and free; and laughing at injuries, not maddening under them! Why am I so changed?", author: "Emily Bronte" },
             { text: "i write you into every universe that i create and in each one you are full of some kind of light", author: "" },
@@ -67,11 +67,24 @@
             { text: "This is not enough, this is not enough to prove it yet No, I need to hit the bottom.", author: "" },
             { text: "I am too young and I've loved you too much.", author: "Fyodor Dostoyevsky" },
             { text: "I am heartbroken over no one, over having nobody to wish for, nobody to hope for.", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" },
-            { text: "", author: "" }
+            { text: "I am being eaten away by light.", author: "" },
+            { text: "The wound is the place where the Light enters you.", author: "" },
+            { text: "if there is a light then i am going to swallow it. if there is a god then i'm going to make him cry.", author: "" },
+            { text: "Tell me every terrible thing you ever did, and let me love you anyway.", author: "" },
+            { text: "When is a monster not a monster? Oh, when you love it.", author: "" },
+            { text: "There is a crack in everything. That's how the light gets in.", author: "" },
+            { text: "PYLADES: I'll take care of you. ORESTES: It's rotten work. PYLADES: Not to me. Not if it's you.", author: "" },
+            { text: "I just want someone to grab my little face and scream 'ON PURPOSE, ON PURPOSE I AM GOING TO CARE ABOUT YOU'", author: "" },
+            { text: "That's the choice. I love him, with all that, because of all that. On purpose. I love him on purpose.", author: "" },
+            { text: "I'm homesick for myself. In place of home is a face I no longer recognise", author: "" },
+            { text: "When I imagine myself I am barely there.", author: "" },
+            { text: "And during the night, when all lovers are asleep, we're awake, kissing.", author: "James Andrew Crosby." },
+            { text: "I am young, and unspoilt and in love, Full of terror, and prayer, and yearning.", author: "" },
+            { text: "I did violence to my own heart;", author: "" },
+            { text: "God, god, god, I need love, I need it, I need it.", author: "" },
+            { text: "Do I contradict myself? Very well then... I contradict myself; I am large... I contain multitudes.", author: "" },
+            { text: "Why does tragedy exist? Because you are full of rage. Why are you full of rage? Because you are full of grief.", author: "" }
+            
         ];
 
         const quoteElement = document.getElementById('quote');
