--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       body {
             font-family: Calibri, Arial, sans-serif;
             text-align: center;
-            background-color: #FFFFFF;
+            background-color: #FFDEAD;
             margin: 0;
             padding: 0;
         }
