--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             { text: "When is a monster not a monster? Oh, when you love it.", author: "" },
             { text: "There is a crack in everything. That's how the light gets in.", author: "" },
             { text: "PYLADES: I'll take care of you. ORESTES: It's rotten work. PYLADES: Not to me. Not if it's you.", author: "" },
-            { text: "I just want someone to grab my little face and scream 'ON PURPOSE, ON PURPOSE I AM GOING TO CARE ABOUT YOU'", author: "" },
-            { text: "That's the choice. I love him, with all that, because of all that. On purpose. I love him on purpose.", author: "" },
+            { text: "I just want someone to grab my little face and scream 'ON PURPOSE, ON PURPOSE I AM GOING TO CARE ABOUT YOU'", author: "Jenny Slate" },
+            { text: "That's the choice. I love him, with all that, because of all that. On purpose. I love him on purpose.", author: "Casey McQuiston" },
             { text: "I'm homesick for myself. In place of home is a face I no longer recognise", author: "" },
             { text: "When I imagine myself I am barely there.", author: "" },
             { text: "And during the night, when all lovers are asleep, we're awake, kissing.", author: "James Andrew Crosby." },
